fix some more findbugs warnings
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@17415 7fc7bbf3-cf45-46d4-be06-341739edd864